# scenesplit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  pyproject.toml
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
.plan/: adr-index.json  backlog.json
.plan/.done/feat-metadata-and-packaging/: checkpoint.json  notes.md
.plan/feat-metadata-and-packaging/: checkpoint.json
.plan/mvp-scenesplit/: item-1.md
.plan/specs/: index.json  spec-001-scenesplit-prd.md
doc/decisions/: 001-use-rust-for-implementation.md  002-use-onnx-runtime-for-ml-inference.md  003-auto-download-model-on-first-run.md  004-github-actions-for-releases.md  README.md
src/: config.rs  embeddings.rs  error.rs  main.rs  model.rs  output.rs  processor.rs  segmentation.rs  video.rs
src/scenesplit/: __init__.py  cli.py  constants.py  embeddings.py  exceptions.py  output.py  processor.py  segmentation.py  video.py
tests/: __init__.py  test_cli.py  test_constants.py  test_segmentation.py  test_video.py
