[package]
name = "scenesplit"
version = "1.0.0"
edition = "2021"
authors = ["SceneSplit Team"]
description = "Offline CLI tool that extracts semantically distinct still images from video"
license = "MIT"
readme = "README.md"
keywords = ["video", "keyframes", "semantic", "extraction", "cli"]
categories = ["command-line-utilities", "multimedia::video"]

[dependencies]
# CLI
clap = { version = "4.4", features = ["derive"] }

# Video processing
opencv = { version = "0.92", default-features = false, features = ["videoio", "imgcodecs", "imgproc"] }

# ML inference
ort = { version = "2.0.0-rc.9", default-features = false, features = ["load-dynamic"] }
ndarray = "0.16"

# Image processing
image = "0.25"

# Utilities
thiserror = "2.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.14"

[profile.release]
lto = true
codegen-units = 1
strip = true
